3.Design_Final_Assignment/layout.css
.entire_page{
	width: 100%;
  background: url(UI_FILES/entire_background.png);
}
.TOP_PART{
	position: relative;
	background-color: ffffff;
  background: url(UI_FILES/background_probably.png);
	width: 100%;
  padding: 17px 0px 6px 0px;
}

.Important_TOP_PART{
	position: relative;
  background-color: ffffff;
}
.top_lower{
  position: relative;
  text-align: center;
  width: 100%;
}
.logo-wrapper{
  width: 61.71%
}
.Main_Slider{
  width:100%;
  position: relative
}
.slideshow-container {
  width: 100%;
  position: relative;
  background: url(UI_FILES/button_background.png)
}
.mySlides {
  display: none;
}

.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: black;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

.prev_2, .next_2 {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: FFB79B;
	background-color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}
.next_2 {
  right: 0;
  border-radius: 3px 0 0 3px;
}
.prev_2:hover, .next_2:hover {
	background-color: FFB79B;
	color: white;
}

.prev_1, .next_1{
  cursor: pointer;
  position: absolute;
  top: 22px;
  height:100%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: FFB79B;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
  text-align: center;
}

.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}
.next_1 {
  right: 0;
  border-radius: 3px 0 0 3px;
}


/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color: FFB79B;
}
.prev_1:hover, .next_1:hover {
  background-color: FFB79B;
  color: white;
}
.text {
  color: #f2f2f2;
  font-size: 15px;
  padding: 8px 8px;
  position: absolute;
  bottom: 8px;
  width: 100%;
  text-align: center;
}
.text_1{
  color: #f2f2f2;
  background-color: FFB79B;
  font-size: 15px;
  padding: 8px 8px;
  position: absolute;
  top: 0px;
  left: 50%;
  right:50%;
  width: 10%;
  margin-left: auto;
  margin-right: auto;
  border-color: BLACK;

}
.fade {
  text-align: center;
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}
.slideshow-container_1 {
  width: 100%;
  position: relative;
  background: url(UI_FILES/slider_background_holder.png)
}
.fade_1 {
  text-align: center;
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}


.fade_1:hover {
  text-align: center;
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}

.Main_Buttom{
	width:100%;
	position: relative;
	background-image: url(UI_FILES/entire_background.png);
}

.left_part{
  width: 72%;
  position: relative;
	background-image: url(UI_FILES/entire_background.png);
	/*float: left;*/
	max-height:2500px;
}
.Right_part{
	top:-2505;
	width: 26%;
	position: relative;
	background-image: url(UI_FILES/entire_background.png);
	/*float: right;*/
	margin-top: 0%;
	margin-right: 25%;
	margin-left: 75%;
	margin-top: 30px;
}

.Recent_Post{
  width: 100%;
  margin-top: 30px;
}
.ending_set  {
	background-color: ffffff;
}
.Remaining_Four{
	width: 100%;
	margin-top: -20px;
	min-height: 1412px;
}
.SearchBar{
	background-color: ffffff;
	width: 100%;
	min-height: 59px;
	margin-top: 30px;
}
.SearchBar_1{
	background-color: ffffff;
	width: 80%;
	min-height: 59px;
	margin-top: 5px;
}


.Popular_Post{
	background-color: ffffff;
	width: 100%;
	margin-top: 30px;
	min-height: 380px;
}
.emtpty_storage{
	background-image: url(UI_FILES/entire_background.png);
	margin-top: 50px;
	width: 100%;
	height: 50px;
}
.white_empty_storage{
	background-color: ffffff;
	width: 100%;
	height: 100px;

}

.CATEGORIES{
	background-color: ffffff;
	width: 100%;
	min-height: 250px;
}
.Instagram{
	background-color: ffffff;
	width: 100%;
}
.Footer{
	background-image: url('UI_FILES/footer_background.png');
	width:100%;
	max-height: 450px;

}
.About_me{
	width:35%;
	position: relative;
	margin-top: 30px;
	margin-left: 0%;
}

.LATEST_TWEET{
	width: 25%;
	position:relative;
	margin-left: 50%;
	top: -450;
	left:-120;
}
.SUBSCRIBED{
	width: 35%;
	position:relative;
	margin-left: 50%;
	top: -900;
	left:230;
}
@-webkit-keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

